--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,14 @@ ADGUARD_PASSWORD=your-secure-password
 CHECK_INTERVAL_SECONDS=30
 RETRY_ATTEMPTS=3
 RETRY_DELAY_MS=1000
+
+# Webhook Configuration (optional - for Gatus integration)
+# Enables webhook endpoint for receiving health updates from Gatus
+WEBHOOK_ENABLED=false
+WEBHOOK_PORT=8080
+WEBHOOK_PATH=/webhook
+WEBHOOK_AUTH_TOKEN=your-secure-webhook-token-here
+
+# Per-endpoint timeout tracking (key feature for detecting silent failures)
+# Time in seconds after which individual Gatus endpoints are considered stale
+WEBHOOK_TIMEOUT_SECONDS=300
