--- a/.env.example
+++ b/.env.example
@@ -8,13 +8,7 @@ CHECK_INTERVAL_SECONDS=30
 RETRY_ATTEMPTS=3
 RETRY_DELAY_MS=1000
 
-# Webhook Configuration (optional - for Gatus integration)
-# Enables webhook endpoint for receiving health updates from Gatus
-WEBHOOK_ENABLED=false
-WEBHOOK_PORT=8080
-WEBHOOK_PATH=/webhook
-WEBHOOK_AUTH_TOKEN=your-secure-webhook-token-here
-
-# Per-endpoint timeout tracking (key feature for detecting silent failures)
-# Time in seconds after which individual Gatus endpoints are considered stale
-WEBHOOK_TIMEOUT_SECONDS=300
+# Gatus Polling Configuration (optional - for Gatus integration)
+# Controls how often to poll Gatus instances for endpoint statuses
+GATUS_POLLING_INTERVAL_SECONDS=30
+GATUS_POLLING_TIMEOUT_SECONDS=10
